1674: Fix jumping navbar when scrolled

--- a/web/themes/custom/hoeringsportal/assets/css/_base.scss
+++ b/web/themes/custom/hoeringsportal/assets/css/_base.scss
@@ -4,6 +4,7 @@ body {
   background: $gray-100;
   word-wrap: break-word;
   letter-spacing: 0.05em;
+  padding-top: 96px;
 }
 
 h1,
